# lerobot_zml

./: .dockerignore  .gitignore
examples/backward_compatibility/: replay.py
examples/phone_to_omx/: evaluate.py  record.py  replay.py  teleoperate.py
examples/phone_to_omx/urdf/: robot.urdf
examples/phone_to_rebearm/: evaluate.py  record.py  replay.py  teleoperate.py
examples/phone_to_rebearm/urdf/: robot.urdf
examples/teleop_to_omx/: .gitignore  pyproject.toml
examples/teleop_to_omx/certs/: server.crt
examples/teleop_to_omx/examples/: run_omx.py  run_simulation.py  run_so101.py
examples/teleop_to_omx/teleop_android/: __init__.py  lerobot_processors.py  server.py
examples/teleop_to_robot/certs/: README.md  server.key
examples/teleop_to_robot/examples/: run_rebearm.py
examples/teleop_to_robot/teleop_android/: lerobot_phone.py  lerobot_utils.py
src/lerobot/datasets/: video_utils.py
src/lerobot/motors/: motors_bus.py
src/lerobot/robots/: utils.py
src/lerobot/robots/omx_follower/: robot_kinematic_processor.py
src/lerobot/robots/rebearm_follower/: rebearm_follower.py  robot_kinematic_processor.py
src/lerobot/scripts/: lerobot_record.py  lerobot_replay.py  lerobot_teleoperate.py
src/lerobot/teleoperators/: utils.py
src/lerobot/teleoperators/omx_leader/: omx_leader.py
